--- a/modules/seminar/templates/base.tex
+++ b/modules/seminar/templates/base.tex
@@ -89,6 +89,7 @@
 \numberwithin{figure}{subsection}
 
 % Include overrides specific to this seminar instance from its static file (in the repository)
+\input{core/i18n/(* competition.language *)/override.tex}
 \input{input/(* module.id *)/(* competition.id *)/.static/format-override.tex}
 
 (@ block specific @)(@ endblock @)
