Added crawler, reworking paths

--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -10,6 +10,8 @@
 \DeclareMathOperator{\Div}{\del\cdot}
 \DeclareMathOperator{\Rot}{\del\times}
 
+\NewDocumentCommand{\RotV}{m}{\Rot{\vec{#1}}}
+
 \DeclareMathOperator{\atantwo}{atan2}
 
 \DeclareMathOperator{\maxop}{max\ }
