--- a/modules/scholar/templates/lecture.tex
+++ b/modules/scholar/templates/lecture.tex
@@ -10,7 +10,7 @@
 
 \fancypagestyle{scholar}{
     \fancyhf{}
-    \fancyhead[L]{\textit{(* course.name *)}}
+    \fancyhead[L]{\textit{(* course.title *)}}
     \fancyhead[R]{\textit{(* lecture.title *)}}
     \fancyfoot[C]{\small \thepage/\pageref*{LastPage}}
 
