--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Operators %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\NewDocumentCommand{\diff}{}{\mathop{}\!\mathrm{d}}
-\NewDocumentCommand{\pdiff}{}{\mathop{}\!\partial}
+\NewDocumentCommand{\diff}{}{\mathop{}\!\mathrm{d}\kern -0.05 em}
+\NewDocumentCommand{\pdiff}{}{\mathop{}\!\partial\kern -0.05 em}
 \NewDocumentCommand{\fdiff}{}{\mathop{}\!\Delta}
 \NewDocumentCommand{\udiff}{}{\mathop{}\!\delta}
 
