--- a/modules/seminar/templates/base-booklets.tex
+++ b/modules/seminar/templates/base-booklets.tex
@@ -40,6 +40,7 @@
                 \large \textbf{(* problem.title *)} \hfill \normalsize%
                 (@ block heading_inner scoped @)(@ endblock heading_inner @)
             }{(* round.number *).(* problem.number *) (* problem.title *)}%
+            \label{(* volume.id *)(* semester.id *)(* round.id *)(* problem.id *)}
         }
 
         (@ block problem_again @)(@ endblock @)
