More improvements to lecture templates

--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -181,7 +181,7 @@
 
 \NewDocumentCommand{\ArrowVector}{m}{\vv{#1}}
 \NewDocumentCommand{\LongVector}{m}{\overrightarrow{#1}}
-\NewDocumentCommand{\BoldVector}{m}{\mathbf{#1}}
+\NewDocumentCommand{\BoldVector}{m}{\boldsymbol{#1}}
 \NewDocumentCommand{\UnitVector}{m}{\hat{\vec{#1}}}
 \NewDocumentCommand{\UnitBoldVector}{m}{\hat{\BoldVector{#1}}}
 \NewDocumentCommand{\UnitArrowVector}{m}{\hat{#1}}
