--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -58,7 +58,7 @@
     \IfNoValueTF{#2}{%
         \frac@{#3#4}{\cdiff{#5}{#3}}%
     }{%
-        \frac@{#3^{#2}#4}{\cdiff{#5}{#3}^{#2}}%
+        \frac@{#3^{#2}#4}{\cdiff{#5}{#3}}%
     }%
 }
 
