--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -129,12 +129,21 @@
 }%
 
 \ExplSyntaxOn
-\NewDocumentCommand{\cdiff}{O{,} m m}{\split_diff:nnn {#1} {#2} {#3}}
+\NewDocumentCommand{\cdiff}{O{,} m m}{\dgs_split_diff:nnn {#1} {#2} {#3}}
 
-\cs_new_protected:Npn \split_diff:nnn #1 #2 #3 {
+\cs_new_protected:Npn \dgs_split_diff:nnn #1 #2 #3 {
     \seq_set_split:Nnn \l_split_args_seq{#1}{#2}
     \seq_map_inline:Nn \l_split_args_seq {#3 ##1}
 }
+
+\NewDocumentCommand{\Coord}{O{;} >{\SplitList{;}} m}{%
+    \def\itemdelim@{\def\itemdelim@{#1}}%
+    {%
+        \left[\ProcessList{#2}{\insert@separator}\right]%
+    }%
+}
+
+\newcommand\insert@separator[1]{\itemdelim@ #1}
 
 \seq_new:N \l_split_args_seq
 \ExplSyntaxOff
