--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -6,7 +6,7 @@
     per-mode                    = reciprocal,                   % `symbol` for "m/s", `reciprocal` for "ms^{-1}"
     group-separator             = {\,},
     group-minimum-digits        = 5,
-    inter-unit-product          = {\,},                         % add a very thin space between units
+    inter-unit-product          = {},                           % nothing between units
     input-decimal-markers       = {.},
     exponent-product            = \cdot,                        % \times for 5×10^7, \cdot for 5.1O^7
     number-unit-product         = {\ },                         % a non-breakable space between numbers and units
